Fiver's homework part II

--- a/fiver/WK2HW.html
+++ b/fiver/WK2HW.html
@@ -11,63 +11,42 @@
       <body> Please fill out all fields </body>
         <label for="inputID" class="sr-only">First Name</label>
         <input type="ID" id="inputID" class="form-control" placeholder="First Name" required autofocus>
-            <button type="button" name="button">Q</button>
-            <button type="button" name="button">W</button>
-            <button type="button" name="button">E</button>
-            <button type="button" name="button">R</button>
-            <button type="button" name="button">T</button>
-            <button type="button" name="button">Y</button>
-            <button type="button" name="button">U</button>
-            <button type="button" name="button">I</button>
-            <button type="button" name="button">O</button>
-          <div>
-            <button type="button" name="button">P</button>
-            <button type="button" name="button">A</button>
-            <button type="button" name="button">S</button>
-            <button type="button" name="button">D</button>
-            <button type="button" name="button">F</button>
-            <button type="button" name="button">G</button>
-            <button type="button" name="button">H</button>
-            <button type="button" name="button">J</button>
-            <button type="button" name="button">K</button>
-            <button type="button" name="button">L</button>
-          <div>
-            <button type="button" name="button">Z</button>
-            <button type="button" name="button">X</button>
-            <button type="button" name="button">C</button>
-            <button type="button" name="button">V</button>
-            <button type="button" name="button">B</button>
-            <button type="button" name="button">N</button>
-            <button type="button" name="button">M</button>
-          <div>
-
-       </form>
         <label for="inputID" class="sr-only">Password</label>
         <input type="ID" id="Last Name" class="form-control" placeholder="Last Name" required autofocus>
-        <button type="Q">Q<br></button>
-        <button type="W">W<br></button>
-        <button type="E">E<br></button>
-        <button type="R">R<br></button>
-        <button type="T">T<br></button>
-        <button type="y">Y<br></button>
-        <button type="U">U<br></button>
-        <button type="I">I<br></button>
-        <button type="O">O<br></button>
-        <button type="P">P<br></button>
-      <div>
-        <form>
           Date of Birth:<div>
-          <input type="date" name="Date of birth">
+          <input type="date" name="Date of birth" class="form-control">
         </form>
         <div>
         <form>
           <input type="radio" name="gender" value="male"> Male<br>
           <input type="radio" name="gender" value="female"> Female<br>
         </form>
-
-     </form>
-        <br>
-        <a href="main.html" class="btn btn-lg btn-primary btn-block" type="submit">Log In</a>
-      </form>
+        <form>
+          Please provide a primary contact number:<br>
+          <input type="tel" name="primarycontact" class="form-control" placeholder="123-456-7890" required autofocus>
+        </form>
+        <select name="phones">
+          <option value="Home">Home</option>
+          <option value="Cell">Cell</option>
+          <option value="Work">Work</option>
+        </select>
+        </form>
+            <div>
+          Pleae provide a secondary contact nubmer:<br>
+          <input type="tel" name="secondarycontact" class="form-control" placeholder="123-456-7890" required autofocus>
+        </form>
+        <select name="phones">
+          <option value="Home">Home</option>
+          <option value="Cell">Cell</option>
+          <option value="Work">Work</option>
+        </select>
+          <div>
+        <form>
+          Primary E-mail:<br>
+          <input type="email" name="email" class="form-control" placeholder="Someone@Somewhere.com"
+        </form>
+        </form>
+          <button type="button" onclick="alert('Success')">Next Page</button>
+        </form>
     </div>
 </html>
